<resources>
    <string name="app_name">Dispatch Medical Provider</string>
    <!--Common-->
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="your_session_has_expired">Your session has been expired, please login again.</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="text_yes">Yes</string>
    <string name="want_logout">Are you sure you want to logout?</string>
    <string name="text_info">Info</string>

    <!--Login-->
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="phone_number">Username</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="invalid_user_name">Invalid username</string>
    <string name="must_be_at_least_8_characters">*Must be at least 8 characters</string>

    <!--Car Request-->
    <string name="home">Home</string>
    <string name="report_id">ID</string>
    <string name="appointment">Appointment</string>
    <string name="report_date">Date</string>
    <string name="report_time">Time</string>
    <string name="reporter_name">Reporter</string>
    <string name="report_service">Service</string>
    <string name="details">Details</string>
    <string name="car_requests">Car Requests</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="service_type">Service Type</string>
    <string name="priority">Priority</string>
    <string name="services">Services</string>
    <string name="transportation_type">Transportation Type</string>
    <string name="breathing_status">Breathing Status</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="blood_type">Blood Type</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>
    <string name="medical_history">Medical History</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="destination_info">Destination</string>
    <string name="request_8345">Request #8345</string>

    <!--Contact Paramedic-->
    <string name="type_your_message">Type your message…</string>
    <string name="paramedic">Paramedic</string>
    <string name="voice">Voice</string>
    <string name="video">Video</string>
    <string name="ringing">Ringing…</string>
    <string name="call_not_answered">Call Not Answered…</string>
</resources>