<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.auth.AuthActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:enabled="false"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/move"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_white_r10_move_st"
        android:gravity="start|center"
        android:textAlignment="viewStart"
        app:hintEnabled="false"
        app:hintTextColor="@color/hint_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@color/transparent"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:gravity="start|center"
            android:hint="@string/phone_number"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingVertical="@dimen/_3sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_username_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/invalid_user_name"
        android:textColor="@color/red_l"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_white_r10_move_st"
        android:gravity="start|center"
        android:textAlignment="viewStart"
        app:hintEnabled="false"
        app:hintTextColor="@color/hint_color"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/move">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@color/transparent"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:gravity="start|center"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/_3sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/must_be_at_least_8_characters"
        android:textColor="@color/red_l"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/bg_fill_button_state"
        android:enabled="false"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/login"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:indeterminateTint="@color/move"
        android:visibility="gone" />
</LinearLayout>