<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_12sdp"
    android:background="@drawable/bg_white_r10_move_st"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_4sdp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:columnCount="2"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:rowCount="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:text="@string/report_id"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_case_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="2"
                android:maxLines="2"
                android:text="5236487"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:text="@string/appointment"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="2"
                android:maxLines="2"
                android:text="12-02-2022"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:text="@string/report_date"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_case_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="2"
                android:maxLines="2"
                android:text="12-02-2022"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:text="@string/report_time"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_report_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="2"
                android:maxLines="2"
                android:text="04:10:00 PM"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:text="@string/reporter_name"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_reporter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="2"
                android:maxLines="2"
                android:text="أحمد بن راشد"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:text="@string/report_service"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_service_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="2"
                android:maxLines="2"
                android:text="نقل"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </GridLayout>

    <Button
        android:id="@+id/btn_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_fill_button_state"
        android:text="@string/details"
        android:textColor="@color/white" />
</LinearLayout>